# primordial-intelligence

./: .env.example  .gitignore  keys.example.json  pyproject.toml
docs/: architecture.md  security.md
ptiq/core/: embedder.py  groq_client.py  keymaster.py  qdrant_setup.py
tests/integration/: test_qdrant_setup.py
tests/unit/: test_groq_client.py  test_keymaster.py
